--- a/README.adoc
+++ b/README.adoc
@@ -12,7 +12,9 @@ Version 0.1, 21.03.2021
 
 This is my own documentation site
 
-== Wordpress Datenbank
+== Wordpress
+
+=== Wordpress Datenbank
 
 Datenbank liegt in /config ab, dieses Verezeichnig ist nach db_data gemounted.
 Der Ordner db_restore für das zurücksichern eines SQL Dumps gedacht:
@@ -22,7 +24,7 @@ Um die Datenbank zu restaurieren genügt folgender Befehl: +
 
 
 
-== Wordpress Debugging
+=== Wordpress Debugging
 
 in wp-config.php folgendes hinterlegen
 ```
@@ -31,3 +33,48 @@ define('WP_DEBUG_LOG', true);
 define('WP_DEBUG_DISPLAY', false);
 @ini_set('display_errors',0);
 ```
+
+
+=== Ecodms Debugging
+Im Backup Verzeichnis reicht es eine create Datei anzulegen. Dies wird von ecodms erkannt und anschließend ein Backup erstellt.
+siehe script "/etc/cron.weekly/ecodmsbackup"
+```
+#!/bin/bash
+
+# This file will trigger ecodms to create a new backup
+#touch /opt/docker/ecodms/ecoDMS/backup/create
+touch ${BACKUP_PATH}/create
+
+BACKUP_PATH=/srv/backup/zeus/ecodms
+MAX_RUNTIME=$((SECONDS+3600))
+
+while [ -f /opt/docker/ecodms/ecoDMS/backup/create ]
+do
+      sleep 31
+      if [ $SECONDS -gt $MAX_RUNTIME ]; then
+              exit 1
+      fi
+done
+
+echo "Backup seems to be started."
+
+while : ; do
+  FILENAME=`ls -rt ${BACKUP_PATH}/*.zip | tail -n1`
+  SIZE1=`stat -c%s "$FILENAME"`
+  sleep 11
+  SIZE2=`stat -c%s "$FILENAME"`
+
+  if [ "$SIZE1" -eq "$SIZE2" ]; then
+    echo "no file size change detected anymore, starting copy job"
+    break
+  fi
+
+  if [ $SECONDS -gt $MAX_RUNTIME ]; then
+    exit 1
+  fi
+done
+
+#cp "$FILENAME" /mnt/fritznas/ASMedia-asm1153e-01/backup/ecodms/backup.zip
+mv -T "$FILENAME" /mnt/fritznas/ASMedia-asm1153e-01/backup/ecodms/backup.zip
+```
+
